<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ReportFormsActivity">

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:padding="0dp"
        android:layout_margin="0dp"
        android:src="@drawable/baseline_arrow_back_24"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:background="@null"
        style="?android:attr/borderlessButtonStyle"
        />

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/select_sector"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/title_hint_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/select_sector_sub_header"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

    <Button
        android:id="@+id/finance_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:onClick="displayFinanceActivity"
        android:text="@string/finance"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        />

    <Button
        android:id="@+id/education_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:onClick="displayEducationActivity"
        android:text="@string/education"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        />

    <Button
        android:id="@+id/social_media_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:onClick="displaySocialMediaActivity"
        android:text="@string/social_media"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        />
</LinearLayout>