<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="15dp"
    android:paddingBottom="15dp"
    tools:context=".ConfirmationActivity"
    >

    <ImageButton
        android:id="@+id/back_btn"
        android:contentDescription="@string/back"
        style="@style/NoRippleBackButton"
        android:onClick="goBack"

        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        />

    <TextView
        android:id="@+id/title_tv"
        android:text="@string/confirm"
        style="@style/ScreenTitle"

        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        />

    <TextView
        android:id="@+id/title_caption_tv"
        android:text="@string/confirm_sub_header"
        style="@style/ScreenTitleCaption"

        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/report_card_view"
        style="@style/Card"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:cardElevation="10dp"
        >

        <TextView
            android:id="@+id/report_header_tv"
            android:text="@string/your_report"
            style="@style/FormHeader"
            />

        <ScrollView
            android:id="@+id/scrolling_report"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">

            <TextView
                android:id="@+id/report_tv"
                style="@style/FormPrompt"
                />

        </ScrollView>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/yesBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yes_submit"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:onClick="submitBtnClicked"
        />


</LinearLayout>