<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="15dp"
    android:paddingBottom="15dp"
    tools:context=".ReportFormActivity">

    <ImageButton
        android:id="@+id/back_btn"
        android:contentDescription="@string/back"
        style="@style/NoRippleBackButton"
        android:onClick="goBack"

        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        />

    <TextView
        android:id="@+id/title_tv"
        android:text="@string/fill_out_the_form"
        style="@style/ScreenTitle"

        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        />

    <TextView
        android:id="@+id/title_caption_tv"
        android:text="@string/report_form_sub_header"
        style="@style/ScreenTitleCaption"

        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        />

    <ScrollView
        android:id="@+id/scrolling_form"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"

        >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:id="@+id/education_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp"
                app:cardElevation="50dp"
                app:contentPadding="10dp"

                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"

                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/educational_details_header_tv"
                        android:text="@string/education_sub_header"
                        style="@style/FormHeader"
                        />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/name_til"
                        android:hint="@string/name"
                        style="@style/FormTextInput"
                        >

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName|text" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/city_til"
                            android:hint="@string/city"
                            style="@style/FormTextInput"
                            android:layout_weight="0.5"
                            android:layout_marginRight="3dp"
                            >

                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textShortMessage|text" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/postcode_til"
                            android:hint="@string/postcode"
                            style="@style/FormTextInput"
                            android:layout_weight="0.5"
                            android:layout_marginLeft="3dp"
                            >

                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text|textPostalAddress|time" />
                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>


                </LinearLayout>



            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/general_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="50dp"
                card_view:contentPadding="10dp"

                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="20dp"

                >


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/general_details_header_tv"
                        android:text="@string/general_sub_header"
                        style="@style/FormHeader"
                        />

                    <TextView
                        android:id="@+id/category_tv"
                        android:text="@string/crime_category"
                        style="@style/FormPrompt"
                        />

                    <Spinner
                        android:id="@+id/category_spinner"
                        style="@style/FormSpinner"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/date_til"
                            android:hint="@string/date_with_hint"
                            style="@style/FormTextInput"
                            android:layout_weight="0.5"
                            android:layout_marginRight="4dp"
                            >

                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="date|text" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/time_til"
                            android:hint="@string/time_with_hint"
                            style="@style/FormTextInput"
                            android:layout_weight="0.5"
                            android:layout_marginLeft="4dp"
                            >

                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text|time" />
                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/description_til"
                        android:hint="@string/description"
                        style="@style/FormTextInput"
                        android:layout_weight="1"
                        >

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textMultiLine"
                            android:maxLines="13"
                            android:minLines="5" />
                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>



            </androidx.cardview.widget.CardView>


        </androidx.appcompat.widget.LinearLayoutCompat>


    </ScrollView>


    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        />


</LinearLayout>